# Doomsday-Engine

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.markdown  README.md  appveyor.yml
apps/gloomed/: CMakeLists.txt
apps/gloomed/src/: commander.cpp  commander.h  editor.cpp  editor.h  editorapp.cpp  editorapp.h  editorwindow.cpp  main.cpp  (+2 more)
doomsday/: .clang-format  .gitignore  .tm_properties  CMakeLists.txt  Doomsday.dsp  Doomsday.dsw  Doomsday.sln  Doomsday.vcproj  Doxyfile  Info.plist  JDoom.vcproj  JHeretic.vcproj  JHexen.vcproj  License.template  Makefile  Makefile.am  Makefile.jDoom  Makefile.jHeretic  Makefile.jHexen  Makefile.ogl  README  Readme.rtf  SDLMain.m  TODO  autogen.sh  bootstrap.sh  cl.sh  config.pri  config_macx.pri  config_unix.pri  config_unix_any.pri  config_user-example.pri  config_user.pri  config_win32.pri  configure.ac  configure.in  configure.py  curl.pri  deng-header-style.sh  deng-style.sh  (+73 more)
doomsday/Data/: Doomsday.wad  cphelp.txt
doomsday/Defs/: Doomsday.ded  Flags.ded  XG.ded
doomsday/Doc/: Beginner.txt  ChangeLog.txt  CmdLine.txt  CnsName.txt  DEDDoc.txt  DHistory.txt  DSS.txt  Example.bat  InFine.txt  SrcNotes.txt
doomsday/Doomsday.xcode/: project.pbxproj
doomsday/Doomsday.xcodeproj/: project.pbxproj
doomsday/English.lproj/: InfoPlist.strings
doomsday/Include/: GL.h  LZSS.h  cl_def.h  cl_frame.h  cl_mobj.h  cl_player.h  cl_sound.h  cl_world.h  con_action.h  con_bar.h  con_bind.h  con_config.h  con_console.h  con_decl.h  con_main.h  con_start.h  dd_api.h  dd_def.h  dd_defns.h  dd_dgl.h  dd_help.h  dd_input.h  dd_loop.h  dd_main.h  dd_maptypes.h  dd_pinit.h  dd_plugin.h  dd_share.h  dd_types.h  dd_version.h  dd_wad.h  dd_winit.h  dd_zip.h  dd_zone.h  de_audio.h  de_base.h  de_console.h  de_defs.h  de_edit.h  de_graphics.h  (+120 more)
doomsday/Scripts/: Makefile  makedmt.py
doomsday/Src/: .gitignore  Doomsday.def  Doomsday.rc  Makefile.am  cl_frame.c  cl_main.c  cl_mobj.c  cl_player.c  cl_sound.c  cl_world.c  con_action.c  con_bar.c  con_bind.c  con_config.c  con_console.c  con_main.c  con_start.c  dd_defns.c  dd_dgl.c  dd_help.c  dd_input.c  dd_loop.c  dd_main.c  dd_pinit.c  dd_plugin.c  dd_wad.c  dd_winit.c  dd_zip.c  dd_zone.c  dedfile.c  dedread.c  def_data.c  def_main.c  def_read.c  gl_draw.c  gl_font.c  gl_hq2x.c  gl_main.c  gl_pcx.c  gl_png.c  (+92 more)
doomsday/api/: README  api_audiod.h  api_audiod_mus.h  api_audiod_sfx.h  api_base.h  api_busy.h  api_client.h  api_console.h  api_def.h  api_event.h  api_filesys.h  api_fontrender.h  api_gameexport.h  api_gl.h  api_infine.h  api_map.h  api_mapedit.h  api_material.h  api_materialarchive.h  api_player.h  api_plugin.h  api_render.h  api_resource.h  api_server.h  api_sound.h  api_thinker.h  api_uri.h  api_wad.h  apis.h  dd_share.h  dd_types.h  dd_version.h  def_share.h  dengproject.h  doomsday.h  xgclass.h
doomsday/apidoc/: .gitignore
doomsday/apps/: CMakeLists.txt  template.cpp.template  template.h.template
doomsday/client/: CMakeLists.txt  Doxyfile  api.doxy  client-mac.doxy  client-win32.doxy  client.pro
doomsday/cmake/: Arch.cmake  BuildTypes.cmake  Config.cmake  DMGSetup.scpt  Directories.cmake  FindAmethyst.cmake  FindAssimp.cmake  FindCPlus.cmake  FindCcache.cmake  FindDirectX.cmake  FindEAX.cmake  FindFMOD.cmake  FindFoundation.cmake  FindGLBindings.cmake  FindGlib.cmake  FindLZSS.cmake  FindOculusVR.cmake  FindQt.cmake  FindSDL2.cmake  FindSDL2Libs.cmake  FindStb.cmake  Findglbinding.cmake  InstallPrefix.cmake  LegacyPK3s.cmake  MacOSXBundleInfo.plist.in  MacOSXPluginBundleInfo.plist.in  Macros.cmake  MsysInnoSetup.cmake  OpenGL.cmake  Options.cmake  Packaging.cmake  PackagingUnix.cmake  PlatformCygwin.cmake  PlatformGenericUnix.cmake  PlatformMacx.cmake  PlatformMsys.cmake  PlatformRaspberryPi.cmake  PlatformUnix.cmake  PlatformWindows.cmake  PlatformiOS.cmake  (+8 more)
doomsday/doc/: .gitignore  .tm_properties  Makefile  author.ame  bugs.ame  commandline.ame  credit.ame  documentation.ame  environment.ame  features.ame  files.ame  gamemodes.ame  intro.ame  introbrief.ame  introduction.ame  macfiles.ame  network.ame  plugins.ame  readme.ame  resources.ame  unix.ame  unixfiles.ame  unixintro.ame  winfiles.ame
doomsday/doxygen/: .gitignore  common.doxy  custom.css  header.html
doomsday/engine/: Doxyfile  api.doxy  doxygen.css  engine-mac.doxy  engine-win32.doxy  engine.pro
doomsday/host/: doomsday-host  doomsdayhostrc-example  host.pro
doomsday/libappfw/: appfw.doxy  libappfw.pro
doomsday/libcommon/: CMakeLists.txt
doomsday/libcore/: data.pri  filesys.pri  libcore.pro  network.pri  scriptsys.pri  widgets.pri
doomsday/libdeng/: CMakeLists.txt  libdeng.pro
doomsday/libdeng1/: libdeng1.pro
doomsday/libdeng2/: .gitignore  CMakeLists.txt  Doxyfile  api2.doxy  concurrency.pri  data.pri  deng2.pro  doxygen.css  filesys.pri  game.pri  legacy.pri  libdeng2.pro  network.pri  scriptsys.pri  version.pri  widgets.pri
doomsday/libdoomsday/: libdoomsday.pro
doomsday/libgui/: gui.doxy  libgui.pro
doomsday/liblegacy/: liblegacy.pro
doomsday/libs/: CMakeLists.txt
doomsday/libshell/: libshell.pro  shell.doxy
doomsday/net.dengine.base.pack/: Info  helpstrings.txt
doomsday/plugins/: .gitignore  CMakeLists.txt  Doxyfile  config.pri  config_plugin.pri  pluginconfig.pri  plugins.pro
doomsday/post/: CMakeLists.txt
doomsday/postbuild/: bundleapp.sh  postbuild.pro
doomsday/sdk/: CMakeLists.txt
doomsday/server/: CMakeLists.txt  Doxyfile  server.pro
doomsday/tests/: CMakeLists.txt  TestConfig.cmake  config_test.pri  testapp.cpp  testapp.de  testapp.h  tests.pri  tests.pro
doomsday/tools/: .gitignore  CMakeLists.txt  tools.pro
libs/: CMakeLists.txt
libs/core/: CMakeLists.txt
libs/doomsday/: CMakeLists.txt
libs/doomsdaygui/: CMakeLists.txt
libs/gamekit/: CMakeLists.txt
libs/gloom/: CMakeLists.txt
libs/gui/: CMakeLists.txt
post/: CMakeLists.txt
tests/test_appfw/: CMakeLists.txt  README.md
tests/test_glsandbox/: CMakeLists.txt  main.cpp  testwindow.cpp  testwindow.h
tools/wadtool/: CMakeLists.txt  wadtool.c  wadtool.h  wadtool.pro
(+17107 files in other folders)
