SUBDIRS = libltdl Src

DISTCLEANFILES = *~

jDoomDataFiles = Data/jDoom/jDoom.wad Defs/jDoom/Anim.ded	       \
Defs/jDoom/Audio.ded Defs/jDoom/Details.ded Defs/jDoom/Doom1Lights.ded \
Defs/jDoom/Doom2Lights.ded Defs/jDoom/Finales.ded		       \
Defs/jDoom/Lights.ded Defs/jDoom/Maps.ded Defs/jDoom/Objects.ded       \
Defs/jDoom/Particles.ded Defs/jDoom/PlutFinales.ded		       \
Defs/jDoom/Special.ded Defs/jDoom/Sprites.ded			       \
Defs/jDoom/TNTFinales.ded Defs/jDoom/Text.ded Defs/jDoom/Values.ded    \
Defs/jDoom/jDoom.ded Runtime/jDoom/Startup.cfg

jHereticDataFiles = Data/jHeretic/jHeretic.wad Defs/jHeretic/Anim.ded \
Defs/jHeretic/Audio.ded Defs/jHeretic/Finales.ded		      \
Defs/jHeretic/Lights.ded Defs/jHeretic/Maps.ded			      \
Defs/jHeretic/Objects.ded Defs/jHeretic/Special.ded		      \
Defs/jHeretic/Sprites.ded Defs/jHeretic/Text.ded		      \
Defs/jHeretic/jHeretic.ded Runtime/jHeretic/Startup.cfg

jHexenDataFiles = Data/jHexen/jHexen.wad Defs/jHexen/Anim.ded	     \
Defs/jHexen/Audio.ded Defs/jHexen/Finales.ded Defs/jHexen/Lights.ded \
Defs/jHexen/Maps.ded Defs/jHexen/Objects.ded Defs/jHexen/Special.ded \
Defs/jHexen/Sprites.ded Defs/jHexen/Text.ded Defs/jHexen/jHexen.ded  \
Runtime/jHexen/Startup.cfg

nobase_dist_pkgdata_DATA = Data/Doomsday.wad Data/cphelp.txt	   \
Data/KeyMaps/default.dkm Data/KeyMaps/fi.dkm			   \
Data/Graphics/Background.pcx Data/Graphics/BoxFill.png		   \
Data/Graphics/Hint.png Data/Graphics/Mouse.png			   \
Data/Graphics/RadioCO.pcx Data/Graphics/BoxCorner.png		   \
Data/Graphics/BoxShade.png Data/Graphics/Logo.png		   \
Data/Graphics/RadioCC.pcx Data/Graphics/WallGlow.pcx		   \
Data/Fonts/Fixed.dfn Data/Fonts/Fixed12.dfn Data/Fonts/Large.dfn   \
Data/Fonts/Small10.dfn Data/Fonts/Small7.dfn Data/Fonts/Small8.dfn \
Data/Fonts/System.dfn Data/Fonts/System12.dfn Defs/Doomsday.ded	   \
Defs/Flags.ded Defs/XG.ded $(jDoomDataFiles) $(jHereticDataFiles)  \
$(jHexenDataFiles)
